[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acatome-chat"
version = "0.3.0"
description = "AI research assistant — local Ollama or Claude/GPT-4o, switchable. Paper library, doc editing, web search."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "acatome-lambic>=0.1.0",
    "acatome-mcp>=0.2.2",
    "acatome-extract>=0.1.0",
    "precis-mcp>=0.1.0",
    "perplexity-sonar-mcp>=0.1.0",
    "catapult-mcp>=0.1.0",
    "grandmofty-mcp>=0.1.0",
]

[project.optional-dependencies]
postgres = ["acatome-store[postgres]"]
embeddings = ["acatome-store[embeddings]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "black>=24.0"]

[project.scripts]
acatome-chat = "acatome_chat.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_chat"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bumpversion]
current_version = "0.3.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/acatome_chat/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
